fix: #19073 visibilite menu hors ligne

--- a/src/assets/templates/menu-principal.css
+++ b/src/assets/templates/menu-principal.css
@@ -87,6 +87,14 @@
   display: block;
 }
 
+.offline-element {
+  display: none;
+}
+
+.guichet .offline-element {
+  display: block;
+}
+
 [data-role='menu'] .toggle-right {
   display: none;
 }
